Kit reflection system finished